--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- At the top of the file  -->
+{% load static %}
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -7,6 +9,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <title>WeFood - {% block title %}{% endblock %}</title> 
+        <!-- in our html head tag add the following  -->
+        <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
+        <script src="{% static 'scripts/main.js' %}" defer></script>
+
     </head>
     <body >
         <nav class="navbar is-black" role="navigation" aria-label="main navigation">
